--- a/courseCode.css
+++ b/courseCode.css
@@ -33,7 +33,7 @@ th {
 }
 #search-container {
     text-align: center;
-    margin: 10px;
+    margin: 15px;
 }
 #search {
     width: 90%;
@@ -47,7 +47,22 @@ th {
 #search:focus {
     outline: none;
 }
-
+#alert {
+    display: none;
+    position: fixed;
+    width: 90%;
+    max-width: 300px;
+    top: 1px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #4798c8;
+    color: whitesmoke;
+    padding: 10px 10px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    font-size: 16px;
+}
 @media (max-width: 600px) {
     th, td {
         font-size: 14px;
